Creating a seperate layout file for header footer and sidebar

--- a/package.json
+++ b/package.json
@@ -16,7 +16,22 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2"
   },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|less|scss)$": "identity-obj-proxy"
+    },
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
+  },
   "devDependencies": {
+    "jest": "^29.7.0",
+    "babel-jest": "^29.7.0",
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
     "@eslint/js": "^9.15.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
